film controller, hallType controller, hall controller

--- a/CinemaInfrastructure/Views/HallTypes/Index.cshtml
+++ b/CinemaInfrastructure/Views/HallTypes/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<CinemaDomain.Model.Company>
+﻿@model IEnumerable<CinemaDomain.Model.HallType>
 
 @{
-    ViewData["Title"] = "Кінокомпанії";
+    ViewData["Title"] = "Index";
 }
 
 <h1>Index</h1>
