hall type details, hall create

--- a/CinemaInfrastructure/Views/Home/Index.cshtml
+++ b/CinemaInfrastructure/Views/Home/Index.cshtml
@@ -8,4 +8,5 @@
     <p>До <a href="@Url.Action("Index", "Companies")">виробників фільмів</a></p>
     <p>До <a href="@Url.Action("Index", "Halltypes")">типи залів</a></p>
     <p>До <a href="@Url.Action("Index", "Films")">фільми</a></p>
+    <p>До <a href="@Url.Action("Index", "Halls")">зали</a></p>
 </div>
