film details, film details by session, hall details by seats

--- a/CinemaInfrastructure/Views/Home/Index.cshtml
+++ b/CinemaInfrastructure/Views/Home/Index.cshtml
@@ -9,4 +9,7 @@
     <p>До <a href="@Url.Action("Index", "Halltypes")">типи залів</a></p>
     <p>До <a href="@Url.Action("Index", "Films")">фільми</a></p>
     <p>До <a href="@Url.Action("Index", "Halls")">зали</a></p>
+    <p>До <a href="@Url.Action("Index", "Seats")">місця</a></p>
+    <p>До <a href="@Url.Action("Index", "Sessions")">сеанси</a></p>
+    <p>До <a href="@Url.Action("Index", "Viewers")">глядачі</a></p>
 </div>
