--- a/CinemaInfrastructure/Views/Films/DetailsBySessions.cshtml
+++ b/CinemaInfrastructure/Views/Films/DetailsBySessions.cshtml
@@ -1,19 +1,19 @@
 ﻿@model CinemaDomain.Model.Film
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "DetailsBySessions";
 }
 
-<h1>Details</h1>
+<h1>DetailsBySessions</h1>
 
 <div>
     <h4>Film</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
