film ratings, films details by ratings, viewers details by ratings

--- a/CinemaInfrastructure/Views/Films/Index.cshtml
+++ b/CinemaInfrastructure/Views/Films/Index.cshtml
@@ -87,6 +87,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="DetailsBySessions" asp-route-id="@item.Id">DetailsBySessions</a> |
+                <a asp-action="DetailsByRatings" asp-route-id="@item.Id">DetailsByRatings</a>|
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
