--- a/CinemaInfrastructure/Views/Home/Index.cshtml
+++ b/CinemaInfrastructure/Views/Home/Index.cshtml
@@ -12,4 +12,5 @@
     <p>До <a href="@Url.Action("Index", "Seats")">місця</a></p>
     <p>До <a href="@Url.Action("Index", "Sessions")">сеанси</a></p>
     <p>До <a href="@Url.Action("Index", "Viewers")">глядачі</a></p>
+    <p>До <a href="@Url.Action("Index", "FilmRatings")">оцінки</a></p>
 </div>
