booking edit, details

--- a/CinemaInfrastructure/Views/Home/Index.cshtml
+++ b/CinemaInfrastructure/Views/Home/Index.cshtml
@@ -13,4 +13,5 @@
     <p>До <a href="@Url.Action("Index", "Sessions")">сеанси</a></p>
     <p>До <a href="@Url.Action("Index", "Viewers")">глядачі</a></p>
     <p>До <a href="@Url.Action("Index", "FilmRatings")">оцінки</a></p>
+    <p>До <a href="@Url.Action("Index", "Bookings")">бронювання</a></p>
 </div>
