написи українською, стиль vapor, завершений create

--- a/CinemaInfrastructure/Views/Bookings/Edit.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit Booking (Change Seat)";
 }
 
-<h1>Edit Booking (Change Seat)</h1>
+<h1>Змінити бронювання (змінити місце)</h1>
 
 <form asp-action="Edit" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
