--- a/CinemaInfrastructure/Views/Companies/Index.cshtml
+++ b/CinemaInfrastructure/Views/Companies/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Кінокомпанії";
 }
 
-<h1>Index</h1>
+<h1>Компанії</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Створити нову</a>
 </p>
 <table class="table">
     <thead>
