--- a/CinemaInfrastructure/Views/Home/Index.cshtml
+++ b/CinemaInfrastructure/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-3">Раді вас вітати!</h1>
-    <p>До <a href="@Url.Action("Index", "FilmCategories")">категорій фільмів</a></p>
-    <p>До <a href="@Url.Action("Index", "Companies")">виробників фільмів</a></p>
+    <h1 class="display-3">DreamScreen</h1>
+    <p>До <a href="@Url.Action("Index", "FilmCategories")">категорії фільмів</a></p>
+    <p>До <a href="@Url.Action("Index", "Companies")">виробники фільмів</a></p>
     <p>До <a href="@Url.Action("Index", "Halltypes")">типи залів</a></p>
     <p>До <a href="@Url.Action("Index", "Films")">фільми</a></p>
     <p>До <a href="@Url.Action("Index", "Halls")">зали</a></p>
