--- a/CinemaInfrastructure/Views/Bookings/Create.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Створити</h1>
 
-<h4>Booking</h4>
+<h4>бронювання</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,7 +32,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
 @section Scripts {
