--- a/CinemaInfrastructure/Views/Bookings/Details.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Детально</h1>
 
 <div>
-    <h4>Booking</h4>
+    <h4>бронювання</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
