--- a/CinemaInfrastructure/Views/FilmCategories/Index.cshtml
+++ b/CinemaInfrastructure/Views/FilmCategories/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Категорії фільмів</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Створити новий</a>
 </p>
 <table class="table">
     <thead>
