--- a/CinemaInfrastructure/Views/Films/Details.cshtml
+++ b/CinemaInfrastructure/Views/Films/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Детально</h1>
 
 <div>
-    <h4>Film</h4>
+    <h4>фільм</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -44,5 +44,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
