--- a/CinemaInfrastructure/Views/Halls/Edit.cshtml
+++ b/CinemaInfrastructure/Views/Halls/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Змінити</h1>
 
-<h4>Hall</h4>
+<h4>зал</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
 @section Scripts {
