--- a/CinemaInfrastructure/Views/Viewers/Index.cshtml
+++ b/CinemaInfrastructure/Views/Viewers/Index.cshtml
@@ -34,6 +34,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="DetailsByRatings" asp-route-id="@item.Id">DetailsByRatings</a> |
+                <a asp-action="DetailsByBookings" asp-route-id="@item.Id">DetailsByBookings</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
